Added Email For FCL

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -99,7 +99,7 @@
                                 </div>
                                 <div class="text">
                                     <h6>Write email</h6>
-                                    <a href="mailto:needhelp@company.com">mail@fcl.com</a>
+                                    <a href="mailto:needhelp@company.com">fcl.shipments@gmail.com</a>
                                 </div>
                             </li>
                             <li>
