--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -14,7 +14,7 @@
         <div class="top-right">
             <!-- Info List -->
             <ul class="info-list">
-                <li><i class="fa fa-envelope"></i> <a href="mailto:needhelp@company.com">mail@fcl.com</a>
+                <li><i class="fa fa-envelope"></i> <a href="mailto:needhelp@company.com">fcl.shipments@gmail.com</a>
                 </li>
                 <li><i class="fa fa-clock"></i> Mon - Sat 03:00 PM - 09:30 PM, Sunday - CLOSED</li>
             </ul>
