--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -81,7 +81,7 @@
                                     <li>
                                         <strong>Email</strong>
                                         <i class="fa fa-envelope"></i>
-                                        <a href="mailto:needhelp@company.com">mail@fcl.com</a>
+                                        <a href="mailto:needhelp@company.com">fcl.shipments@gmail.com</a>
                                     </li>
                                     <li>
                                         <strong>Address</strong>
